Add distance track and alternating turn management

--- a/Components/ScoreOverlay.razor
+++ b/Components/ScoreOverlay.razor
@@ -14,7 +14,7 @@
             <div>@Player.TotalDistance</div>
             <div>@AI.TotalDistance</div>
 
-            <div>Safeties (@Player.SafetyArea.Count vs @AI.SafetyArea.Count)</div>
+            <div>Safeties</div>
             <div>+ @(Player.SafetyArea.Count * 100)</div>
             <div>+ @(AI.SafetyArea.Count * 100)</div>
 
