style safety area

--- a/Components/PlayerBoard.razor
+++ b/Components/PlayerBoard.razor
@@ -4,7 +4,9 @@
     
     <!-- Safety Area -->
     <div class="safety-box">
-        <div class="label-text">Safety Area</div>
+        <div class="distance-header">
+            <div class="label-text">Safeties</div>
+        </div>
         <div class="safety-list">
             @foreach (var s in State.SafetyArea)
             {
