--- a/wwwroot/css/app.css
+++ b/wwwroot/css/app.css
@@ -56,7 +56,7 @@
     flex-direction: column;
     justify-content: space-between;
     max-width: 1100px;
-    height: 100vh;
+    height: 100%;
     width: 100%;
     position: relative;
     margin: 0 auto;
@@ -109,7 +109,7 @@
     display: flex;
     justify-content: center;
     margin-top: 1vh;
-    height: var(--card-h);
+    height: var(--hand-h);
     gap: 8px;
     padding-top: 15px;
     max-width: 100%;
